<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <ImageView
        android:contentDescription="@string/image"
        android:id="@+id/ivEventLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvEventName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ivEventLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvOwnerName"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>

    <TextView
        android:id="@+id/tvOwnerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/owner_name"
        app:layout_constraintStart_toEndOf="@id/ivEventLogo"
        app:layout_constraintTop_toBottomOf="@id/tvEventName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
